# leptos_golden_layout

./: Cargo.toml  README.md  golden-layout.css  golden-layout.js  index.html
src/: bindings.rs  golden_layout.rs  item_config.rs  lib.rs  main.rs
