[package]
name = "leptos_golden_layout"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
leptos = { version = "0.5.0", features = ["csr"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Document", "Element", "Window"] }
